added my Replit account link

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     <li><a href="https://www.instagram.com/shivam.1022/" target="_blank">Instagram</a> </li>
                     <li><a href="https://github.com/Shivam1938" target="_blank">GitHub</a></li>
                     <li><a href="mailto:boymax1938@gamil.com">Email</a></li>
+                    <li><a href="https://replit.com/@boymax1938/Java-script-learning#index.js" target="_blank">Replit</li>
                     <li><a style="text-decoration: none;"  href="tel:9315535826">9315535826</a></li>
                 </ul>
             </section>
