--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <li>Web Devlopement</li>
                     <li>HTML</li>
                     <li>CSS</li>
+                    <li>GIT & GITHUB</li>
                 </ul>
             </section>
 
